# Sentinel-Ai

./: .dockerignore  .env.example  .gitignore  App.tsx  CLAUDE.md  CONTAINERCONFIG_FIX.md  DEBUGGING_SESSION_2026-02-10.md  Dockerfile.frontend  README.md  chat.py  docker-compose.yml  docs.py  index.html  metadata.json  package-lock.json  package.json  start.sh  start_box.sh  stop.sh  types.ts
.agent/rules/: GEMINI.md  save.md
backend/: Dockerfile  main.py  requirements.txt
backend/services/: __init__.py  document_service.py  pii_service.py  vector_store.py
components/: ComplianceDashboard.tsx  DemoChat.tsx  DocumentUpload.tsx  Hero.tsx  Navbar.tsx  RoiCalculator.tsx
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  OPERATIONS.md  PHASE2_MAGIC_INBOX.md  ROADMAP.md  SECURITY_CHANGELOG.md
scripts/: setup-native.sh  setup.sh
services/: geminiService.ts
src/backend/: main.py  pyproject.toml  requirements.txt
src/backend/services/: __init__.py  audit_service.py  database_service.py  document_service.py  llm_service.py  nlp_analysis_service.py  ocr_service.py  pii_service.py  vector_store.py
src/backend/utils/: config.py
src/frontend/: app.py
src/frontend/.streamlit/: config.toml
src/watcher/: __init__.py  requirements.txt  watcher.py
