[project]
name = "sentinelai-backend"
version = "1.0.0"
description = "DSGVO-compliant local LLM backend with RAG capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LLM & Embeddings
    "ollama>=0.4.0",
    # Vector Store
    "chromadb>=0.4.22",
    # Document Processing
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "unstructured>=0.12.0",
    # PII Detection
    "spacy>=3.7.0",
    # Encryption & Security
    "cryptography>=42.0.0",
    # Utilities
    "python-dateutil>=2.8.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
